--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 
- VITE_BACKEND_BASE_URL=https://ranvoice-backend.onrender.com/
 # VITE_BACKEND_BASE_URL=https://shelteringly-inspirational-pura.ngrok-free.dev
 # VITE_RETELL_API_KEY=key_4ff7ed6881963e47e088db9b2d58
+ VITE_BACKEND_BASE_URL=https://ranvoice-backend.onrender.com
